Revision history for Perl extension Net::Amazon:
0.57 (xx/yy/zzzz)
   (cb) Nathan Handler re-re-reported a man page issue, rt 46708.

0.56 (09/07/2009)
   (cb) Add support for searching MP3 downloads as requsted by Dave 
        Hodgkinson.
   (cb) Required for MP3 Downloads, and inspired by Vince Veselosky's 
        fix, update aws4-itemsearch.
   (cb) secret_key is now a required parameter.  Update all of the example
        scripts with the secret_key parameter.

0.55 (07/20/2009)
   (cb) Yuichi Tateno implemented support for the SearchIndex all.
   (cb) Vince Veselosky fixed adm/aws4-types script, and as a result
        updated classes in Validate/Type.
   (cb) Update to WSDL 2009-07-16.

0.54 (06/17/2009)
   (cb) Alfons Wittmann reported that signing requests broke caching due
        to the current time being incorporated into every signed URL 
	submitted.

0.53 (06/13/2009)
   (cb) Nathan Handler re-reported a man page issue on Ubuntu, rt 46708.  
        I managed to fix 197 issues, except for the specific one he called 
        out in the bug.

0.52 (06/09/2009)
   (cb) Nathan Handler reported a man page issue on Ubuntu, rt 46708.

0.51 (06/05/2009)
   (cb) Vince Veselosky submitted a patch to support request signing, a
        feature that is required for accessing AWS after 2009-08-15.
        Upgrading is recommended.
   (cb) Complete the upgrade to WSDL 2009-03-31 that was started by
        Vince Veselosky.
   (cb) Clean-up POD issues found by pod checker.
   (cb) Indicate the code has moved to github.com.
   (cb) Update the README to reflect the actual date of the WSDL.

0.50 (07/29/2008)
   (cb) Michael Hendricks submitted a patch to guarantee that error 
        messages are stored as an arrayref.

0.49 (04/24/2008)
   (cb) Make an effort to return the price of an item.  Check for the
        price of an item in the following order: Amazon's price, third
        party new, and then third party used.  This issue was reported